<resources>
    <string name="nombre_mascota">Nombre Mascota</string>
    <string name="raza_mascota">Raza Mascota</string>
    <string name="likes_mascota">Likes</string>
    <string name="app_name">Mascotas</string>
    <string name="action_favorite">Favoritos</string>
    <string name="menu">Menu</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_Acerca_de">Acerca de</string>
    <string name="contacto_nombre">Inserta tu Nombre </string>
    <string name="contacto_email">Inserta tu Email </string>
    <string name="contacto_mensaje">Inserta tu Mensaje </string>
    <string name="contacto">Contactame </string>
    <string name="camera">Flash Flash </string>
    <string name="anombre">Fernando Ivan Lagunas Ayala </string>
    <string name="acarrera">Ingeniero en Computacion </string>
    <string name="adireccion">17 de Febrero #4, Col. Benito Juarez C. P. 39010, Chilpangingo, Guerrero</string>
    <string name="atelefonocontactar">7471221480 </string>
    <string name="aabout">About </string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
