<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    card_view:cardCornerRadius="@dimen/corner_radius_cardview"
    card_view:cardBackgroundColor="@color/colorPrimary"
    card_view:cardMaxElevation="@dimen/elevacion_cardview"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="120dp"
        >

        <ImageView

            android:id="@+id/imgfoto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/p1"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvmascotaCV"
            android:text="@string/nombre_mascota"
            android:textSize="@dimen/titulocardview1"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRazaCV"
            android:text="@string/raza_mascota"
            android:textSize="@dimen/titulocardview2"
            android:textAlignment="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            
            >
            <ImageButton
                android:id="@+id/btnlikeCV"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:background="@drawable/dog_bone_50"
                />
            <TextView
                android:id="@+id/tvLikesCV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/likes_mascota"
                />
                <ImageView
                    android:id="@+id/imgTotalLikes"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:background="@drawable/dog_bone_filled_50"
                    />

        </LinearLayout>





    </LinearLayout>
</android.support.v7.widget.CardView>