<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detalle_mascota"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.filagunas.mascotas.DetalleMascota">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        android:layout_below="@+id/miActionbar"
        >
    <TextView
        android:id="@+id/tvMascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_mascota"
        android:textStyle="bold"
        android:textSize="@dimen/text_mascota"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        >



        <TextView
            android:id="@+id/tvRaza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/raza_mascota"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_mascota"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        >



        <TextView
            android:id="@+id/tvLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/likes_mascota"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_mascota"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            />
    </LinearLayout>

</LinearLayout>
